Fix up config and clean up readme